# fakeout

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: app.c  app.h  ball.c  ball.h  block.c  block.h  draw.c  draw.h  hitbox.h  main.c  player.c  player.h  text.c  text.h
